Responsive overflow fix

--- a/media.css
+++ b/media.css
@@ -509,6 +509,10 @@
         width: 200% ;
         padding: 30px 0;
     }
+    .sw-main{
+        max-width: 100vw;
+        overflow-x: hidden;
+    }
 
     .swiper-slide {
         transform: scale(0.5);
